--- a/package.json
+++ b/package.json
@@ -2,23 +2,24 @@
   "name": "tutorial-gpt",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wolfgang-auer.github.io/Tutorial-GPT",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
-    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,9 +40,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   }
 }
